Companies fix next phase
